--- a/CcsbiProject/templates/Networks.html
+++ b/CcsbiProject/templates/Networks.html
@@ -3,33 +3,28 @@
 {% load static %}
 
 {% block content %}
-<style>
-    .text-justify{
-        font-family: Merriweather;font-size: 18px;
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href=" {% static '/css/main.css' %} ">
 
-    }
-    
-    
-</style>
 <br>
 <br>
 <br>
 <div class="container">
-    <p style="font-size: 30px; " class="text-center">
-    <b> Connect with us </b>
+    <p style="font-size: 30px; " class="text-center headings">
+        Connect with us 
     </p>
-    <p class="text-justify">
+    <p class="text-justify" id="text">
         The <b>CitSci Network</b> is a collaboration of student clubs (citizen science clubs), researchers, NGOs, Academic institutions and public libraries with CCSBI for generating biodiversity data through citizen science. Each unit of participants are expected to work independently on their area of focus while maintaining continuous communication with the centre.  The centre will be conducting productive workshops and training programmes on citizen science for the participants for optimising their workflow and outreach activities. If you represent any of the below-mentioned categories and are interested in joining, feel free to contact us. 
 
     </p>
     <hr  color="red" style="margin-left:0px; height: 5px;width:15%;">
     <div class="row">
         <div class="col-sm-8" >
-            <h2 >
-                <b>Citizen Science Clubs </b>
+            <p class="headings">Citizen Science Clubs </p>
 
             </h2>
-            <p class="text-justify">
+            <p class="text-justify" id="text">
                 Citizen science clubs are intended to bring together future conservationists and researchers across the state. 
                 Clubs will be functioning at individual college campuses (Life science/environmental science). 
                 Graduate and postgraduate students are invited to take part. Club members will be encouraged to start their own CitSci projects under the guidance of CCSBI. 
@@ -53,12 +48,10 @@
         </div>
         
         <div class="col-sm-8" >
-            <br>
-            <h2 >
-                <b>Academic/Research institutes </b>
+            <p class="headings">Academic/Research institutes </p>
 
             </h2>
-            <p class="text-justify">
+            <p class="text-justify" id="text">
                 Academic/research institutions can contribute to citizen science in many ways, starting from assessing their campus biodiversity to planning and executing bioblitz-like events anywhere with the help of CCSBI. 
                 Being a part of this network will be beneficial for its students and faculties as they can take part in workshops, training programmes and events conducted by CCSBI. 
             </p>
@@ -69,11 +62,10 @@
     <br>
     <div class="row">
         <div class="col-sm-8" >
-            <h2 >
-                <b>NGOs </b>
+            <p class="headings">NGOs </p>
 
             </h2>
-            <p class="text-justify">
+            <p class="text-justify" id="text">
                 Non governmental organisations have always been on the frontiers of wildlife conservation. Citizen science is an opportunity for them to contribute more to science and nature conservation. NGOs can work with local communities on biodiversity-related issues through citizen science, with the necessary training and guidance by CCSBI. This will help in converting indigenous knowledge about species distributions into digital and publicly accessible format, at the same time this will help in generating conservation attitudes within the stakeholder communities. NGOs can collaborate with CCSBI for organising biodiversity surveys and associated workshops.
             </p>
 
@@ -93,12 +85,10 @@
         </div>
         
         <div class="col-sm-8" >
-            <br>
-            <h2 >
-                <b>Public libraries</b>
+            <p class="headings">Public libraries</p>
 
             </h2>
-            <p class="text-justify">
+            <p class="text-justify" id="text">
                 Public libraries can play an effective role in popularising citizen science. Creating a local biodiversity database at each public library will help 
                 its members understand their biodiversity and the importance of sustainable living. 
                 We invite public libraries to collaborate with us to generate local biodiversity databases state-wide. 
