--- a/CcsbiProject/templates/Opportunities.html
+++ b/CcsbiProject/templates/Opportunities.html
@@ -2,12 +2,16 @@
 {% load static %}
 
 {% block content %}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href=" {% static '/css/main.css' %} ">
+
 
 <div class="container">
     <br>
 <br>
 <br>
-<h2 style="text-align: center;"> <b>Work with us </b></h2>
+<p  style="text-align: center;  font-family: 'Oswald', sans-serif; font-size: 32px;"> Work with us </p>
 
     <div class="row">
         <div class="col-md-5">
@@ -18,13 +22,13 @@
         <div class="col-md-7">
             <br>
             <br>
-            <h2>Biodiversity internship programme</h2>
-            <span>CCSBI is inviting interns to carry out citizen science projects
+            <p class="headings ">Biodiversity internship programme</p>
+            <p class="text-justify" id="text">CCSBI is inviting interns to carry out citizen science projects
                 across the state. Postgraduates/PG students (life science or
                 environmental science) can apply for this internship. The
                 program will be focusing on creating and executing a citizen
                 science project on your own, on any public oriented platform.
-            </span>
+            </p>
 
         </div>
 
@@ -37,9 +41,9 @@
             <br>
             <br>
             <br>
-            <h2>MSc / BSc dissertation </h2>
-            <span>Graduate and postgraduate students (Life science) can contact the Centre for Citizen Science and Biodiversity Informatics for carrying out short-term research on CitSci projects as UG/PG dissertation under Dr Balakrishnan Peroth, Scientist, Dept. of Wildlife Biology, KFRI.
-            </span>
+            <p class="headings">MSc / BSc dissertation </p>
+            <p class="text-justify" id="text">Graduate and postgraduate students (Life science) can contact the Centre for Citizen Science and Biodiversity Informatics for carrying out short-term research on CitSci projects as UG/PG dissertation under Dr Balakrishnan Peroth, Scientist, Dept. of Wildlife Biology, KFRI.
+            </p>
 
         </div>
         <div class="col-md-5">
@@ -61,10 +65,10 @@
             <br>
             <br>
             <br>
-<br>
-            <h2>Outreach interns </h2>
-            <span>Outreach internship is designed for arts and media students. It is aimed at encouraging students to come up with innovative ideas for promoting citizen science and spreading its achievements through virtual media platforms. It can be videos, art forms, installations etc. 
-            </span>
+            <br>
+            <p class="headings">Outreach interns </p>
+            <p class="text-justify" id="text">Outreach internship is designed for arts and media students. It is aimed at encouraging students to come up with innovative ideas for promoting citizen science and spreading its achievements through virtual media platforms. It can be videos, art forms, installations etc. 
+            </p>
 
         </div>
 
