--- a/CcsbiProject/templates/Projects_old.html
+++ b/CcsbiProject/templates/Projects_old.html
@@ -93,8 +93,8 @@
 
 <br>
 <div class="container">
-  <h3>The Fruit Bat
-    Project</h3>
+  <p class="headings">The Fruit Bat
+    Project</p>
 </div>
 
 <br>
@@ -122,7 +122,7 @@
 
   <br>
   <div class="container">
-    <h3>Invasion watch India</h3>
+    <p class="headings">Invasion watch India</p>
   </div>
   
   <br>
@@ -148,7 +148,7 @@
 
     <br>
 <div class="container">
-  <h3>Pollinator count</h3>
+  <p class="headings">Pollinator count</p>
 </div>
 
 <br>
@@ -174,7 +174,7 @@
 
   <br>
 <div class="container">
-  <h3>Forest Biodiversity database</h3>
+  <p class="headings">Forest Biodiversity database</p>
 </div>
 
 <br>
@@ -200,7 +200,7 @@
 
   <br>
 <div class="container">
-  <h3>Institutional-Biodiversity database </h3>
+  <p class="headings">Institutional-Biodiversity database </p>
 </div>
 
 <br>
@@ -226,7 +226,7 @@
 
   <br>
 <div class="container">
-  <h3>Biodiversity data accumulation programme </h3>
+  <p class="headings">Biodiversity data accumulation programme </p>
 </div>
 
 <br>
