--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -1,6 +1,13 @@
+{% load static %}
+
+{% block content %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Bootstrap Font Icon CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href=" {% static '/css/main.css' %} ">
+
 <style>
 
 
@@ -95,10 +102,11 @@
 
     width: 100%;
   }
-</style>
-{% load static %}
 
-{% block content %}
+
+</style>
+
+
 <div class="container">
     <img id="img" src="{% static '/images/headerimg1.svg' %}" style="margin-left: 5%;"  alt="...">
 
@@ -166,7 +174,7 @@
         
         <div class="col-md-6" >
             <br/>
-            <h2 ><b>What is Citizen Science</b></h2>
+            <p class="headings">What is Citizen Science<p> 
 
  
 
@@ -194,18 +202,18 @@
             <br/>    
             <br/>
             <br/>  
-            <h2 ><b>Citizen Science In India? </b></h2> 
+            <p class="headings">Citizen Science In India? </p> 
             <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">We are facing a severe data shortage on biodiversity, especially on lesser-known and non-charismatic species. Crowd-sourced data could help us understand their ecology, distribution and population status. In a biodiversity-rich country like ours, Your contributions matter!</p>
 
         </div>
     </div>
-    <h2 style="text-align: center;"><b>Centre for Citizen Science and Biodiversity Informatics</b></h2>
+    <p class="headings" style="text-align: center;">Centre for Citizen Science and Biodiversity Informatics</p>
     <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
         Building a knowledgeable society is inevitable for the conservation and management of natural resources. Training the general public to explore and learn their biodiversity is the best way to do so and Citizen science can be a perfect tool for that. The Centre for Citizen Science and biodiversity informatics (CCSBI) is an initiative by the Kerala Forest Research Institute. We envision carving out a knowledgeable society of citizen scientists through outreach and capacity building, and to generate quality biodiversity data for the future management and conservation activities. 
     </p>
 
 
-        <h2 ><b>Objectives: </b></h2>
+    <p class="headings">Objectives: </p>
 
 
 
@@ -231,7 +239,7 @@
     <br>
     <p style="text-align: center;  font-family: Merriweather;font-size: 22px; color: #808080; font-weight: bold;" >We welcome you all to explore, learn and grow with us!</p>
 
-    <h2 style="text-align: center;"><b>Our Network & Impact</b></h2>
+    <p class="headings" style="text-align: center;">Our Network & Impact</p>
     <br>
     <div class="row">
         <div class="col" style="width:100%">
@@ -301,12 +309,9 @@
             
             <br/>
             <b><hr  color="red" style="margin-left:0px; height: 5px;width:15%;"></b>
-            <h2><b>Join the Growing </b></h2>
-            <h2><b>CitSci Network</b></h2>
+            <p class="headings">Join the Growing </p>
+            <p class="headings">CitSci Network</p>
 
- 
-            <br/>
-            <br/>  
             <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
                 Becoming a citizen scientist is quite simple; create an account on a CitSci platform like <a href="https://www.inaturalist.org">iNaturalist</a>, explore your backyard, click photos of the biodiversity around you and upload your observations. Welcome to the community!
 
@@ -329,7 +334,7 @@
     <div class="row">
     
       <div class="col-sm-3" >
-        <h2><b>Get In Touch</b></h2>
+        <p class="headings">Get In Touch</p>
         <b><hr  color="red" style="margin-left:0px; height: 2%;width:45%;"></b>
         
         
@@ -380,4 +385,16 @@
   
 
 </footer>
+<script>
+  $(document).ready(function() {
+      $( " .nav-item" ).bind( "click", function(event) {
+          
+          var clickedItem = $( this );
+          $( ".nav-item" ).each( function() {
+              $( this ).removeClass( "active" );
+          });
+          clickedItem.addClass( "active" );
+      });
+  }); 
+  </script>
 {% endblock content %}
