--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -102,6 +102,51 @@
 
     width: 100%;
   }
+  :root {
+    --back-to-top-offset: 200px;
+    --back-to-top-button-size: 2.8em;
+    --color-accent: rgb(13,95,123);
+	--color-accent-bright: rgb(25,66,99);
+	--color-accent-alpha: rgba(10, 43, 233, 0.281);
+}
+#back-to-top {
+	place-self: end;
+	position: sticky;
+	margin-top: calc(100vh + var(--back-to-top-offset));
+	bottom: 2.7em;
+	right: 2em;
+  float: right;
+	min-width: var(--back-to-top-button-size);
+  width: 10px;
+	height: var(--back-to-top-button-size);
+	border-radius: 50%;
+
+	display: grid;
+	place-items: center;
+
+	text-decoration: none;
+	background-color: var(--color-accent);
+	box-shadow: 0 0.6em 1em 0.2em var(--color-accent-alpha);
+	transform: translateY(0%);
+	transition: ease-out 200ms;
+	transition-property: transform, background-color;
+}
+
+#back-to-top:hover {
+	transform: translateY(-22%);
+	background-color: var(--color-accent-bright);
+}
+
+#back-to-top::after {
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 100%;
+	height: 100%;
+	transform: translateY(-30%);
+	background-color: rgba(0, 0, 0, 0);
+	display: block;
+}
 
 
 </style>
@@ -325,6 +370,7 @@
             <img src="{% static '/images/home5.png' %}"  width="100%" height="100%"   alt="...">
         </div>
     </div>
+    <a id="back-to-top" href="#">👆🏼</a>
     
 </div>
 <br>
