--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -112,7 +112,8 @@
 #back-to-top {
 	place-self: end;
 	position: sticky;
-	margin-top: calc(100vh + var(--back-to-top-offset));
+	/*margin-top: calc(100vh + var(--back-to-top-offset));*/
+  margin-top: 700px;
 	bottom: 2.7em;
 	right: 2em;
   float: right;
@@ -348,6 +349,7 @@
     </div>
     <br>
     
+    <a id="back-to-top" href="#">👆🏼</a>
     <div class="row">
         
         <div class="col-md-5" >
@@ -370,7 +372,6 @@
             <img src="{% static '/images/home5.png' %}"  width="100%" height="100%"   alt="...">
         </div>
     </div>
-    <a id="back-to-top" href="#">👆🏼</a>
     
 </div>
 <br>
@@ -433,6 +434,7 @@
 </footer>
 <script>
   $(document).ready(function() {
+    /*
       $( " .nav-item" ).bind( "click", function(event) {
           
           var clickedItem = $( this );
@@ -441,6 +443,7 @@
           });
           clickedItem.addClass( "active" );
       });
+           */
   }); 
   </script>
 {% endblock content %}
