rearrage the work

--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -114,6 +114,7 @@
 	position: sticky;
 	/*margin-top: calc(100vh + var(--back-to-top-offset));*/
   margin-top: 700px;
+  margin-right: -10%;
 	bottom: 2.7em;
 	right: 2em;
   float: right;
