project image change

--- a/CcsbiProject/templates/Projects.html
+++ b/CcsbiProject/templates/Projects.html
@@ -64,7 +64,7 @@
     opacity: 0.1;
   }
   #invasion{
-    height: 36%;
+    height: 45%;
   }
   #bat #text {
     position:relative;
@@ -84,7 +84,7 @@
     opacity: 0.1;
   }
   #bat{
-    height: 36%;
+    height: 45%;
   }
   #pollinator #text {
     position:relative;
@@ -104,7 +104,7 @@
     opacity: 0.1;
   }
   #pollinator{
-    height: 50%;
+    height: 48%;
   }
   #forestbiodiversitydatabase #text {
     position:relative;
@@ -124,7 +124,7 @@
     opacity: 0.1;
   }
   #forestbiodiversitydatabase{
-    height: 50%;
+    height: 48%;
   }
   
   #localbiodiversity #text {
@@ -145,7 +145,7 @@
     opacity: 0.1;
   }
   #localbiodiversity{
-    height: 50%;
+    height: 60%;
   }
   #text{
     font-family: Merriweather;font-size: 18px;
@@ -173,14 +173,14 @@
     <div class="col-sm-6">
       <p class="headings">The Fruit Bat Project</p>
       <div class="card " id="bat" >
-        <img href = "#" id="img" src ="{% static '/images/bat1.jpg' %}" style="height: 100%;">
+        <img href = "#" id="img" src ="{% static '/images/bat2.jpg' %}" style="height: 100%;">
         <br>
         <p class="text-justify"  id="text"  >
           After the spill of zoonotic diseases like Nipah and covid 19, human attitude towards bats and their roosts has shifted significantly. 
           Many populations have been chased away from their native roost sites across Kerala, altering the population status and natural distribution of the species. 
           For the conservation and proper management of bats, we have to understand their  ecology, specifically roosting sites and feeding grounds. 
           The fruit bat project is aimed at identifying and mapping the roosting sites of a common fruit bat, the Indian flying fox; <i>Pteropus medius</i>. 
-          You may find them roosting on tall, wide trees, mostly in disturbed habitats. Data is collected through an online form. 
+          You may find them roosting on tall, wide trees, mostly in disturbed habitats.  
            <a href="https://thefruitbatproject.weebly.com/"  class="btn btn-primary"  target="_blank">Know More</a>
           </p>
           
@@ -206,7 +206,7 @@
 
 
   </div>
-  <div class="row" style="margin-top: -40%;">
+  <div class="row" style="margin-top: -25%;">
     <div class="col-sm-6">
       <p class="headings">Pollinator count</p>
       <div class="card "  id="pollinator">
@@ -226,7 +226,7 @@
     <div class="col-sm-6">
       <p class="headings">Forest Biodiversity database</p>
       <div class="card " id="forestbiodiversitydatabase">
-        <img href = "#" src ="{% static '/images/forestbiodiversitydatabase.jpg' %}" id="img"  style="height: 100%;">
+        <img href = "#" src ="{% static '/images/forestbiodiversitydatabase.JPG' %}" id="img"  style="height: 100%;">
         <p class="text-justify"  id="text">
           Our tropical climate makes our forests one of the most diverse ecosystems in the world. Effect of anthropogenic influences and climate change is concerning, 
           shouting out the need for frequent monitoring of biodiversity throughout our protected areas. A biodiversity database for each protected area is being developed 
@@ -244,7 +244,7 @@
     <div class="col-sm-6">
       <p class="headings">Institutional-Biodiversity database</p>
       <div class="card " id="localbiodiversity" >
-        <img href = "#" src ="{% static '/images/localbiodiversity.jpg' %}" id="img"  style="height: 100%;">
+        <img href = "#" src ="{% static '/images/localbiodiversity.jpeg' %}" id="img"  style="height: 100%;">
         <p class="text-justify" id="text">
           Urban wildlife is the least studied biological resource around us. We currently lack data on locality specific urban biodiversity.
            A ward-level urban-biodiversity database is being generated in collaboration with local governing bodies. 
