project image change

--- a/CcsbiProject/templates/Projects.html
+++ b/CcsbiProject/templates/Projects.html
@@ -226,7 +226,7 @@
     <div class="col-sm-6">
       <p class="headings">Forest Biodiversity database</p>
       <div class="card " id="forestbiodiversitydatabase">
-        <img href = "#" src ="{% static '/images/forestbiodiversitydatabase.JPG' %}" id="img"  style="height: 100%;">
+        <img href = "#" src ="{% static '/images/forestbiodiversitydatabase.jpg' %}" id="img"  style="height: 100%;">
         <p class="text-justify"  id="text">
           Our tropical climate makes our forests one of the most diverse ecosystems in the world. Effect of anthropogenic influences and climate change is concerning, 
           shouting out the need for frequent monitoring of biodiversity throughout our protected areas. A biodiversity database for each protected area is being developed 
