--- a/CcsbiProject/templates/Events.html
+++ b/CcsbiProject/templates/Events.html
@@ -34,64 +34,176 @@
 <br>
 <br>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6" style="padding: 0px;" >
-            
-            <div class="card text-center img-wrapper " >
-                <img src="{% static '/images/Events1.JPG' %}" class="inner-img" >
-                <blockquote class="blockquote" style="margin-top: -37%;font-weight: bold;color: white;">
- 
-                    <p class="quote">  Biodiversity assessment workshop & introduction to ‘iNaturalist’ - a citizen science platform </p>
-                    <p class="author">— Vivekananda College Kizhoor Kunnamkulam</p>
-                    <a href=""  class="btn btn-primary"  target="_blank">Know More</a>
-                    <hr>
-                  </blockquote>
-
-            </div>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active"   >
+        <img class="d-block w-100" src="{% static '/images/Event_5.jpg' %}" alt="Citizen Science workshop" >
+        <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold;  background-color: black; opacity: 0.3; left:0%;right:0%;bottom: 0%;top:85%;  ">
+        <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+          <br>
+          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
         </div>
-        <div class="col-md-6" style="padding: 0px;" >
-            
-            <div class="card text-center img-wrapper " >
-                <img src="{% static '/images/Events1.JPG' %}" class="inner-img">
-
-            </div>
-    
+      </div>
+      <div class="carousel-item ">
+        <img class="d-block w-100" src="{% static '/images/Event_2.jpg' %}" alt="Citizen Science workshop" href="https://thefruitbatproject.weebly.com/"  target="_blank">
+        <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.3; left:0%;right:0%;bottom: 0%; top:85%; ">
+          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+            <br>
+            <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
         </div>
+
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static '/images/Event_3.jpg' %}" alt="Citizen Science workshop">
+        <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.5; left:0%;right:0%;bottom: 0%; box-shadow: 0px 0px 25px 25px black;">
+          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+            <br>
+            <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static '/images/Event_4.jpg' %}" alt="Citizen Science workshop">
+        <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.5; left:0%;right:0%;bottom: 0%; box-shadow: 0px 0px 25px 25px black;">
+          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+            <br>
+            <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static '/images/Event_6.jpg' %}" alt="Citizen Science workshop">
+        <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.5; left:0%;right:0%;bottom: 0%; box-shadow: 0px 0px 25px 25px black;">
+          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+            <br>
+            <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+        </div>
+      </div>
     </div>
-    <div class="row">
-        <div class="col-md-6" style="padding: 0px;">
-            <div class="card text-center img-wrapper"   >
-                <img src="{% static '/images/Events1.JPG' %}" class="inner-img">
-                <blockquote class="blockquote" style="margin-top: -44%;font-weight: bold;color: white;">
- 
-                    <p class="quote">  Biodiversity assessment workshop & introduction to ‘iNaturalist’ - a citizen science platform </p>
-                    <p class="author">— Vivekananda College Kizhoor Kunnamkulam</p>
-                    <a href=""  class="btn btn-primary"  target="_blank">Know More</a>
-                    <hr>
-                  </blockquote>
+    <div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" 
+      style="border-radius: 50%; width: 5%; height: 5%;  top:50%;left:5%;  height: 37px; width: 37px;" >
+        <span class="carousel-control-prev-icon" aria-hidden="true" style="color: black; height: 100%; width: 100%;"></span>
+        <span class="sr-only">Previous</span>
+      </a>
 
-            </div>
-    
-        </div>
-        
-        <div class="col-md-6" style="padding: 0px;">
-            
-            <div class="card text-center img-wrapper"   >
-                <img src="{% static '/images/Events1.JPG' %}" class="inner-img">
-                <blockquote class="blockquote" style="margin-top: -44%;font-weight: bold;color: white;">
- 
-                    <p class="quote">  Biodiversity assessment workshop & introduction to ‘iNaturalist’ - a citizen science platform </p>
-                    <p class="author">— Vivekananda College Kizhoor Kunnamkulam</p>
-                    <a href=""  class="btn btn-primary"  target="_blank">Know More</a>
-                    <hr>
-                  </blockquote>
-
-            </div>
-    
-        </div>
     </div>
+
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next"  
+    style="border-radius: 50%; width: 5%; height: 5%;  top:50%;right:5%;  height: 37px; width: 37px;">
+      <span class="carousel-control-next-icon" aria-hidden="true" style="color: black; height: 100%; width: 100%;"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!--
+     style=" background-color: #0D5E7A;  border-radius: 50%; width: 5%; height: 5%;  top:50%;right:5%; opacity: 0.5; height: 37px; width: 37px;" 
+
+      box-shadow: 0px 0px 25px 25px #808080;  shadow
+
+      box-shadow: 0px 0px 25px 25px #808080
+  -->
+
     <br>
     <br>
+
+    <!-- Tabs navs aria-current="page" -->
+<ul class="nav nav-tabs nav-justified mb-3" id="ex1" role="tablist">
+  <li class="nav-item" role="presentation">
+    <a
+      class="nav-link active"
+      id="ex3-tab-1"
+      data-bs-toggle="tab"
+      href="#ex3-tabs-1"
+      role="tab"
+      aria-controls="ex3-tabs-1"
+      aria-selected="true"
+      >Past Events</a
+    >
+  </li>
+  <li class="nav-item" role="presentation">
+    <a
+      class="nav-link "
+      id="ex3-tab-2"
+      data-bs-toggle="tab"
+      href="#ex3-tabs-2"
+      role="tab"
+      aria-controls="ex3-tabs-2"
+      aria-selected="false"
+      >Upcoming Events</a
+    >
+  </li>
+</ul>
+<!-- Tabs navs -->
+
+<!-- Tabs content -->
+<div class="tab-content" id="ex2-content">
+  <div
+    class="tab-pane fade show active"
+    id="ex3-tabs-1"
+    role="tabpanel"
+    aria-labelledby="ex3-tab-1"
+  >
+ 
+
+<br>
+<br>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card text-center" >
+          <p class="headings">
+            Citizen Science workshop - Vivekananda College, Kizhoor
+          </p> 
+          <p style=" color:#2A6FAB;">
+          August 16, 2022
+          </p>
+          <div class="card-body">
+              
+              <p class="text-justify" style="text-align: center;  font-family: Merriweather;font-size: 22px; ">
+                Centre for Citizen Science and Biodiversity Informatics (CCSBI) organised a workshop on ‘Biodiversity assessment and introduction 
+                to ‘iNaturalist’ a citizen science platform’. This workshop was arranged in collaboration with the Nature club, Sree Vivekananda College Kizhoor,
+                Kunnamkulam. And aimed at students and faculties who were interested in participating and organising biodiversity assessments in the campus. 
+                The workshop kicked off with a brief introduction to the ‘iNaturalist’ platform and the mobile application. 
+                <a href="https://thefruitbatproject.weebly.com/"  class="btn btn-primary"  target="_blank">Know More</a>
+              </p>
+              
+          </div>
+        </div>
+
+      </div>
+      <div class="col-md-6">
+        <div class="card text-center" >
+          <p class="headings">
+            Citizen Science workshop - Vivekananda College Kizhoor
+          </p> 
+          <p style=" color:#2A6FAB;">
+          August 16, 2022
+          </p>
+          <div class="card-body">
+              
+              <p class="text-justify" style="text-align: center;  font-family: Merriweather;font-size: 22px; ">
+                Centre for Citizen Science and Biodiversity Informatics (CCSBI) organised a workshop on ‘Biodiversity assessment and introduction 
+                to ‘iNaturalist’ a citizen science platform’. This workshop was arranged in collaboration with the Nature club, Sree Vivekananda College Kizhoor,
+                Kunnamkulam. And aimed at students and faculties who were interested in participating and organising biodiversity assessments in the campus. 
+                The workshop kicked off with a brief introduction to the ‘iNaturalist’ platform and the mobile application. 
+                <a href="https://thefruitbatproject.weebly.com/"  class="btn btn-primary"  target="_blank">Know More</a>
+              </p>
+              
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+  <div
+    class="tab-pane fade"
+    id="ex3-tabs-2"
+    role="tabpanel"
+    aria-labelledby="ex3-tab-2"
+  >
+    No Upcoming Events
+  </div>
+</div>
+<!-- blockquote
     <br>
     <div class="col-md-12" >
             
@@ -107,6 +219,6 @@
           </div>
 
     </div>
-    
+-->
 </div>
 {% endblock content %}
