--- a/CcsbiProject/templates/Events.html
+++ b/CcsbiProject/templates/Events.html
@@ -37,7 +37,7 @@
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active"   >
-        <img class="d-block w-100" src="{% static '/images/Event_5.jpg' %}" alt="Citizen Science workshop" >
+        <img class="d-block w-100" src="{% static '/images/Event_5.JPG' %}" alt="Citizen Science workshop" >
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold;  background-color: black; opacity: 0.3; left:0%;right:0%;bottom: 0%;top:85%;  ">
         <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
           <br>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="carousel-item ">
-        <img class="d-block w-100" src="{% static '/images/Event_2.jpg' %}" alt="Citizen Science workshop" href="https://thefruitbatproject.weebly.com/"  target="_blank">
+        <img class="d-block w-100" src="{% static '/images/Event_2.JPG' %}" alt="Citizen Science workshop" href="https://thefruitbatproject.weebly.com/"  target="_blank">
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.3; left:0%;right:0%;bottom: 0%; top:85%; ">
           <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
             <br>
@@ -54,7 +54,7 @@
 
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="{% static '/images/Event_3.jpg' %}" alt="Citizen Science workshop">
+        <img class="d-block w-100" src="{% static '/images/Event_3.JPG' %}" alt="Citizen Science workshop">
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.5; left:0%;right:0%;bottom: 0%; box-shadow: 0px 0px 25px 25px black;">
           <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
             <br>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="{% static '/images/Event_4.jpg' %}" alt="Citizen Science workshop">
+        <img class="d-block w-100" src="{% static '/images/Event_4.JPG' %}" alt="Citizen Science workshop">
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.5; left:0%;right:0%;bottom: 0%; box-shadow: 0px 0px 25px 25px black;">
           <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
             <br>
