--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -155,7 +155,7 @@
 
 
 <div class="container">
-    <img id="img" src="{% static '/images/headerimg1.svg' %}" style="margin-left: 5%;"  alt="...">
+    <img id="img" src="{% static '/images/head.svg' %}" style="margin-left: 5%;"  alt="...">
 
 </div>
 <div  class="container-fluid" style="padding: 0px;">
