home content changed

--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -210,9 +210,8 @@
 
 
     <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="...">
-    <p class="text-center" style=" font-family: Merriweather;font-size: 22px;"><b><i>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn?
-    
-        You are at the right place!<span style="color: #0E5D7A;" > The Centre for Citizen Science and Biodiversity Informatics</span> will guide you to be a citizen scientist! </b ></i></p>
+    <p class="text-center" style=" font-family: Merriweather;font-size: 22px;"><b><i>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn? You are at the right place!
+      <span style="color: #0E5D7A;" > The Centre for Citizen Science and Biodiversity Informatics </span> will guide you to be a citizen scientist! </b ></i></p>
     <br/>
     <br/>
 
@@ -226,9 +225,11 @@
  
 
             <br/>  
-            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">Citizen science is both an opportunity and a tool! An opportunity for the general public to take part and contribute to science. And a well versed tool for researchers to pool in crowd sourced data. Citizen science is the collaborative research carried out by citizen volunteers and professional scientists to solve a real world question. This crowd sourcing has the potential to collect numerous data from wider locations in a shorter period of time. 
+            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
+              Citizen science is both an opportunity and a tool! An <i>opportunity</i> for the general public to take part and contribute to science. And a well versed tool for researchers to pool crowd sourced data. Citizen science is the practice of public participation and collaboration for improving scientific endeavours, increasing scientific literacy, supporting education, and better addressing societal needs through scientific evidence. 
             </p>
-            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">Across the world, Citizen science brings together people, scientists and policymakers for the conservation of natural resources. Starting from project design to policy implementation, the general public has potential roles to play. 
+            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
+              Across the world, this process of democratisation of knowledge production brings together people, scientists and policymakers and has made significant contributions to many fields including biodiversity conservation and global change. Starting from project design to policy implementation, the general public has potential roles to play. 
             </p>
         </div>
         <div class="col-md-5" >
@@ -237,7 +238,7 @@
     </div>
     <div class="row">
         <div class="col-md-6" >
-            <img src="{% static '/images/home3.jpg' %}" padding-left:25%  width="100%"  style="margin-top: -12%;"   alt="...">
+            <img src="{% static '/images/home3.jpg' %}" padding-left:25%  width="100%"     alt="...">
         </div>
         <div class="col-md-6" >  
 
@@ -246,17 +247,16 @@
             <br/>
             <br/>  
             <br/>
-            <br/>    
-            <br/>
-            <br/>  
             <p class="headings">Citizen Science In India? </p> 
-            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">We are facing a severe data shortage on biodiversity, especially on lesser-known and non-charismatic species. Crowd-sourced data could help us understand their ecology, distribution and population status. In a biodiversity-rich country like ours, Your contributions matter!</p>
+            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
+              Citizen Science is gaining rapid popularity in India due to the increasing popularity and access to digital and mobile technologies to youth. On the other hand, we lack robust and long-term data on biodiversity, environment and similar fields to develop evidence-based policies and thus Citizen Science has considerable potential to contribute to long-term environmental monitoring, regulation and decision-making. And in a biodiversity-rich country like ours, public contributions matter in scientific research!
+            </p>
 
         </div>
     </div>
     <p class="headings" style="text-align: center;">Centre for Citizen Science and Biodiversity Informatics</p>
     <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-        Building a knowledgeable society is inevitable for the conservation and management of natural resources. Training the general public to explore and learn their biodiversity is the best way to do so and Citizen science can be a perfect tool for that. The Centre for Citizen Science and biodiversity informatics (CCSBI) is an initiative by the Kerala Forest Research Institute. We envision carving out a knowledgeable society of citizen scientists through outreach and capacity building, and to generate quality biodiversity data for the future management and conservation activities. 
+      Enabling people to consider options and make informed decisions as individuals and as citizens of a democracy is important as the world struggles with complex problems that affect all aspects of humankind from climate change and loss of ecosystems and biodiversity, to overpopulation, to emerging diseases. Training the general public to participate in scientific research is the best way to do so. To catalyse this idea, the <a href="https://www.kfri.res.in/" target="_blank"> KSCSTE-Kerala Forest Research Institute</a> established the Centre for Citizen Science and Biodiversity Informatics (CCSBI). We envision carving out a knowledgeable society of citizen scientists through outreach and capacity building, and to generate quality biodiversity and environment data for conservation,  management and sustainable use. 
     </p>
 
 
@@ -267,24 +267,24 @@
        
         <ul style=" font-family: Merriweather;font-size: 22px;">
             <li>
-                Coordinate and co-develop citizen science programmes in critical areas,
+                Coordinate and co-develop <b>citizen science</b>  programmes in critical areas,
             </li>
             <li>
-                Generate high-quality biodiversity data for science and conservation,
+                Generate high-quality <b>biodiversity data</b> for science and conservation,
             </li>
             <li>
-                Organise capacity-building workshops for researchers for developing effective citizen science programmes, big data analytics and policy-making,
+                Organise <b>capacity-building </b> workshops for researchers for developing effective citizen science programmes, big data analytics and policy-making,
             </li>
             <li>
-                Develop public outreach programmes to improve environmental awareness and the capacity of citizens to contribute quality data, and
+                Develop <b>public outreach</b> programmes to improve environmental awareness and the capacity of citizens to contribute quality data, and
             </li>
             <li>
-                Collate biodiversity data from the state.
+                <b>Collate </b> biodiversity data from the state.
             </li>
         </ul>
 
     <br>
-    <p style="text-align: center;  font-family: Merriweather;font-size: 22px; color: #808080; font-weight: bold;" >We welcome you all to explore, learn and grow with us!</p>
+    <p style="text-align: center;  font-family: Merriweather;font-size: 22px; color: #808080; font-weight: bold;" >We welcome you to explore, learn and grow with us!</p>
 
     <p class="headings" style="text-align: center;">Our Network & Impact</p>
     <br>
@@ -361,12 +361,13 @@
             <p class="headings">CitSci Network</p>
 
             <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-                Becoming a citizen scientist is quite simple; create an account on a CitSci platform like <a href="https://www.inaturalist.org">iNaturalist</a>, explore your backyard, click photos of the biodiversity around you and upload your observations. Welcome to the community!
+                Becoming a citizen scientist is quite simple; create an account on a CitSci platform like <a href="https://www.inaturalist.org" target="_blank">iNaturalist</a>,
+                or <a href="https://ebird.org/home" target="_blank"> eBird </a>, explore your backyard, click photos/make observations of the biodiversity around you and upload. Welcome to the community!
 
 
             </p>
             <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-                Want to do more? We will help you take part in prestigious CitSci projects across the country or to create your own citsci projects. Check out the Projects and Resources page for more information.  
+              Wish to know more? We will help you take part in various CitSci projects across the country or to create your own CitSci projects. Check out  <a href="/projects" >Projects</a> and <a href="/Resources" >Resources</a> for more information. 
             </p>
         </div>
         <div class="col-md-7" >
