event page added

--- a/CcsbiProject/templates/Events.html
+++ b/CcsbiProject/templates/Events.html
@@ -39,43 +39,43 @@
       <div class="carousel-item active"   >
         <img class="d-block w-100" src="{% static '/images/Event_5.JPG' %}" alt="Citizen Science workshop" >
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold;  background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%;top:88%;  ">
-        <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+        <a href="/Event1"   style="text-decoration: none; color: white; ">Citizen Science workshop </a>
           <br>
-          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+          <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
         </div>
       </div>
       <div class="carousel-item ">
         <img class="d-block w-100" src="{% static '/images/Event_2.JPG' %}" alt="Citizen Science workshop" href="https://thefruitbatproject.weebly.com/"  target="_blank">
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%; top:88%; ">
-          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+          <a href="/Event1"  style="text-decoration: none; color: white; ">Citizen Science workshop </a>
             <br>
-            <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+            <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
         </div>
 
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{% static '/images/Event_3.JPG' %}" alt="Citizen Science workshop">
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%; top:88%;">
-          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+          <a href="/Event1"  style="text-decoration: none; color: white; ">Citizen Science workshop </a>
             <br>
-            <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+            <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{% static '/images/Event_4.JPG' %}" alt="Citizen Science workshop">
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%; top:88%;">
-          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+          <a href="/Event1"   style="text-decoration: none; color: white; ">Citizen Science workshop </a>
             <br>
-            <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+            <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
         </div>
       </div>
 
       <div class="carousel-item">
         <img class="d-block w-100" src="{% static '/images/Event_6.jpg' %}" alt="Citizen Science workshop">
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%; top:88%;">
-          <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Citizen Science workshop </a>
+          <a href="/Event1"  style="text-decoration: none; color: white; ">Citizen Science workshop </a>
             <br>
-            <a href="https://thefruitbatproject.weebly.com/"  target="_blank" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+            <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
         </div>
       </div>
     </div>
@@ -162,7 +162,7 @@
                 to ‘iNaturalist’ a citizen science platform’. This workshop was arranged in collaboration with the Nature club, Sree Vivekananda College Kizhoor,
                 Kunnamkulam. And aimed at students and faculties who were interested in participating and organising biodiversity assessments in the campus. 
                 The workshop kicked off with a brief introduction to the ‘iNaturalist’ platform and the mobile application. 
-                <a href="https://thefruitbatproject.weebly.com/"  class="btn btn-primary"  target="_blank">Know More</a>
+                <a href="/Event1"  class="btn btn-primary" >Know More</a>
               </p>
               
           </div>
@@ -184,7 +184,7 @@
                 to ‘iNaturalist’ a citizen science platform’. This workshop was arranged in collaboration with the Nature club, Sree Vivekananda College Kizhoor,
                 Kunnamkulam. And aimed at students and faculties who were interested in participating and organising biodiversity assessments in the campus. 
                 The workshop kicked off with a brief introduction to the ‘iNaturalist’ platform and the mobile application. 
-                <a href="https://thefruitbatproject.weebly.com/"  class="btn btn-primary"  target="_blank">Know More</a>
+                <a href=""  class="btn btn-primary"  target="_blank">Know More</a>
               </p>
               
           </div>
