--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -8,6 +8,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href=" {% static '/css/main.css' %} ">
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 <style>
 
 
@@ -162,10 +165,10 @@
     <nav class="navbar fixed navbar-expand-lg  navbar-dark bg-dark" style="background: linear-gradient(to right, rgb(27,63,96) , rgb(12,97,125));">
         <div class="container-fluid" style="width: 100%; padding: 0px;">
           <button
-          class="navbar-toggler "
+          class="navbar-toggler navbar-toggler-right"
           type="button"
-          data-toggle="collapse"
-          data-target="#navbarExample01"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarExample01"
           aria-controls="navbarResponsive"
           aria-expanded="false"
           aria-label="Toggle navigation"
@@ -436,16 +439,12 @@
 </footer>
 <script>
   $(document).ready(function() {
-    /*
-      $( " .nav-item" ).bind( "click", function(event) {
-          
-          var clickedItem = $( this );
-          $( ".nav-item" ).each( function() {
-              $( this ).removeClass( "active" );
-          });
-          clickedItem.addClass( "active" );
-      });
-           */
+
+    $(".nav a").on("click", function(){
+      $(".nav").find(".active").removeClass("active");
+      $(this).parent().addClass("active");
+    });
+
   }); 
   </script>
 {% endblock content %}
