--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -8,7 +8,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href=" {% static '/css/main.css' %} ">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 <style>
@@ -292,7 +291,7 @@
     <p class="headings" style="text-align: center;">Our Network & Impact</p>
     <br>
     <div class="row">
-        <div class="col" style="width:100%">
+        <div class="col" style="margin-top: 1%;">
             <div class="card text-center institue" >
                 <div class="card-body" style="height: 300px;">
                     <img src="{% static '/images/icon5.png' %}" style="height:75px;"    alt="...">
@@ -309,8 +308,7 @@
             </div>
         </div>
 
-        <hr>
-        <div class="col">
+        <div class="col" style="margin-top: 1%;">
             <div class="card text-center volunteer">
                 <div class="card-body" style="height: 300px;">
                     <img src="{% static '/images/icon2.png' %}"   alt="...">
@@ -322,8 +320,7 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <div class="col" >
+        <div class="col" style="margin-top: 1%;" >
             <div class="card text-center  observation " >
                 <div class="card-body" style="height: 300px;">
                     <img src="{% static '/images/icon3.png' %}"   alt="...">
@@ -334,8 +331,7 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <div class="col">
+        <div class="col" style="margin-top: 1%;">
             <div class="card text-center dataset">
                 <div class="card-body" style="height: 300px;">
                     <img src="{% static '/images/icon4.png' %}"   alt="...">
